cloud/w10/day-c/guardrails/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: w8-day-2
  labels:
    platform.aws.accelerator/guardrails: "enabled"
    owner: platform-team
    cost-center: training
    environment: lab
